Bug 396119 - Rendering errors in new floating "find" toolbar
Summary: Rendering errors in new floating "find" toolbar
Status: RESOLVED FIXED
Alias: None
Product: konsole
Classification: Applications
Component: general (other bugs)
Version First Reported In: master
Platform: Other Linux
: NOR normal
Target Milestone: ---
Assignee: Konsole Bugs
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2018-07-03 08:28 UTC by Oded Arbel
Modified: 2018-07-12 00:49 UTC (History)
1 user (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Oded Arbel 2018-07-03 08:28:51 UTC
Version 18.07.70

The new floating find toolbar has parts disappearing when scrolling the view down. If the terminal has only white space where the toolbar is located, it can disappear completely.

Scrolling up always re-render the toolbar correctly.

See attached video.
Comment 1 Oded Arbel 2018-07-03 08:32:17 UTC
Failed to upload screen capture. Please review in this link: https://drive.google.com/file/d/1IZHqKt-2gdeOnKq8KjI_IQLOBeW8BgRn/view?usp=sharing
Comment 2 Kurt Hindenburg 2018-07-03 13:16:31 UTC
Yes there are still a few issues w/ the new filter widget - we hope to have them fixed by 18.08 release next month.

This is the filter widget scrolls up off screen bug.
Comment 3 Nate Graham 2018-07-10 00:58:20 UTC
Can confirm.
Comment 4 Kurt Hindenburg 2018-07-12 00:49:27 UTC
Git commit e176667d6809083808d89c4a68a963d10fbfce33 by Kurt Hindenburg, on behalf of Mariusz Glebocki.
Committed on 12/07/2018 at 00:49.
Pushed by hindenburg into branch 'master'.

IncrementalSearchBox: fix rendering during terminal scroll

Summary:
Prevent search widget from moving when scrolling session.

Test Plan:
* Run `seq 1000`
* Turn on search
* Hold Shift+Up, Shift+Down

Actual result: the search box scrolls with terminal contents
Expected result: only terminal should scroll, the box should remain
unchanged

Reviewers: #konsole, hindenburg

Reviewed By: #konsole, hindenburg

Subscribers: hindenburg, ngraham, konsole-devel

Tags: #konsole

Differential Revision: https://phabricator.kde.org/D14038

M  +1    -1    src/TerminalDisplay.cpp

https://commits.kde.org/konsole/e176667d6809083808d89c4a68a963d10fbfce33