IncrementalSearchBox: fix rendering during terminal scroll

Summary:
Prevent search widget from moving when scrolling session.

BUG: 396119

Test Plan:
* Run `seq 1000`
* Turn on search
* Hold Shift+Up, Shift+Down

Actual result: the search box scrolls with terminal contents
Expected result: only terminal should scroll, the box should remain
unchanged

Reviewers: #konsole, hindenburg

Reviewed By: #konsole, hindenburg

Subscribers: hindenburg, ngraham, konsole-devel

Tags: #konsole

Differential Revision: https://phabricator.kde.org/D14038